WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43476
[Qt] mask-box-image renders wrong in certain conditions
https://bugs.webkit.org/show_bug.cgi?id=43476
Summary
[Qt] mask-box-image renders wrong in certain conditions
Kimmo Kotajärvi
Reported
2010-08-04 03:16:46 PDT
Created
attachment 63434
[details]
Test html + three PNGs When using -webkit-mask-box-image with a 64x64px and 32, 32, 32, 32 corner size, some bad stretching can be seen. See attached screenshot. If the sizes are made 32, 31, 32, 32, no stretching happens. Other image and corner sizes trigger the problem as well, the key factor seems to be that left and right edges are exactly half of the image size.
Attachments
Test html + three PNGs
(12.26 KB, application/zip)
2010-08-04 03:16 PDT
,
Kimmo Kotajärvi
no flags
Details
Screenshot of the situation
(25.88 KB, image/png)
2010-08-04 03:17 PDT
,
Kimmo Kotajärvi
no flags
Details
Test html + images
(13.09 KB, application/zip)
2010-08-11 05:05 PDT
,
Kimmo Kotajärvi
no flags
Details
Patch
(1.77 KB, patch)
2010-11-18 11:52 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch 2
(1.32 KB, patch)
2010-11-18 12:01 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kotajärvi
Comment 1
2010-08-04 03:17:24 PDT
Created
attachment 63436
[details]
Screenshot of the situation
Kimmo Kotajärvi
Comment 2
2010-08-11 05:05:27 PDT
Created
attachment 64100
[details]
Test html + images Updated test case.
Benjamin Poulain
Comment 3
2010-11-18 11:52:27 PST
Created
attachment 74272
[details]
Patch This fixes the first and the last case when the pattern is repeated. I am looking into the second and the third case.
Benjamin Poulain
Comment 4
2010-11-18 12:01:51 PST
Created
attachment 74273
[details]
Patch 2 BitmapImage::draw() was suffering the same issue. This fixes the problem.
WebKit Commit Bot
Comment 5
2010-11-19 09:33:08 PST
The commit-queue encountered the following flaky tests while processing
attachment 74273
[details]
: compositing/iframes/overlapped-nested-iframes.html Please file bugs against the tests. These tests were authored by
simon.fraser@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2010-11-19 09:34:30 PST
Comment on
attachment 74273
[details]
Patch 2 Clearing flags on attachment: 74273 Committed
r72412
: <
http://trac.webkit.org/changeset/72412
>
WebKit Commit Bot
Comment 7
2010-11-19 10:18:09 PST
The commit-queue encountered the following flaky tests while processing
attachment 74272
[details]
: animations/suspend-resume-animation.html compositing/iframes/overlapped-nested-iframes.html Please file bugs against the tests. These tests were authored by
cmarrin@apple.com
and
simon.fraser@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8
2010-11-19 10:50:01 PST
The commit-queue encountered the following flaky tests while processing
attachment 74272
[details]
: fast/profiler/throw-exception-from-eval.html inspector/styles-source-lines-inline.html Please file bugs against the tests. These tests were authored by
kmccullough@apple.com
,
oliver@apple.com
,
pfeldman@chromium.org
, and
timothy@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 9
2010-11-19 12:51:56 PST
The commit-queue encountered the following flaky tests while processing
attachment 74272
[details]
: fast/workers/storage/use-same-database-in-page-and-workers.html fast/profiler/throw-exception-from-eval.html Please file bugs against the tests. These tests were authored by
dumi@chromium.org
,
kmccullough@apple.com
,
oliver@apple.com
, and
timothy@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 10
2010-11-19 13:16:01 PST
Comment on
attachment 74272
[details]
Patch Clearing flags on attachment: 74272 Committed
r72432
: <
http://trac.webkit.org/changeset/72432
>
WebKit Commit Bot
Comment 11
2010-11-19 13:16:06 PST
All reviewed patches have been landed. Closing bug.
Benjamin Poulain
Comment 12
2011-01-31 11:06:51 PST
***
Bug 53425
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug