2010-11-19  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] mask-box-image renders wrong in certain conditions
        https://bugs.webkit.org/show_bug.cgi?id=43476

        When rendering a pixmap with a dest rect having a null dimension,
        Qt uses the dimension of the Pixmap. The other ports do not render
        anything by convention.

        This patch change BitmapImage to follow the convention of other ports and do not
        paint anything.

        * platform/graphics/qt/ImageQt.cpp:
        (WebCore::BitmapImage::draw):

git-svn-id: svn://svn.chromium.org/blink/trunk@72412 bbb929c8-8fbe-4397-9dbb-9b2b20218538