third_party/WebKit/WebCore/platform/graphics/qt/ImageQt.cpp
@@ -183,6 +183,9 @@ void BitmapImage::draw(GraphicsContext* ctxt, const FloatRect& dst,
 
     startAnimation();
 
+    if (normalizedSrc.isEmpty() || normalizedDst.isEmpty())
+        return;
+
     QPixmap* image = nativeImageForCurrentFrame();
     if (!image)
         return;
